correcting the batch commit protocol